--- a/404.html
+++ b/404.html
@@ -9,9 +9,11 @@
             flex-direction: column;
             align-items: center;
         }
+
     </style>
 </head>
 <body>
+<!-- test -->
     <section>
         <h1> Page Not Found :/</h1>
         <img src="/multimedia/img/icon.png" alt="icon" width="40%">
