creating all new files for hw4, and nativedialogs.html buttons/html

--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -15,18 +15,15 @@
         saferPromptButton.addEventListener("click", saferPromptFunction);
 
         function alertFunction() {
-
-
+            window.alert("TEST");
         }
 
         function confirmFunction() {
-
-
+            window.confirm("TEST?");
         }
 
         function promptFunction() {
-
-
+            window.prompt("HELLO WORLD");
         }
 
         function saferPromptFunction() {
@@ -43,7 +40,7 @@
         <button id="safer-prompt-button">Safer Prompt</button>
     </section>
     <section id="main-display">
-        
+
     </section>
 </body>
 </html>
