creating all new files for hw4, and nativedialogs.html buttons/html

--- a/crud.html
+++ b/crud.html
@@ -5,6 +5,11 @@
     <title>CRUD Blog Example</title>
 </head>
 <body>
+    <header></header>
+    <h1>CRUD Blog</h1>
+    <main>
 
+    </main>
+    <footer></footer>
 </body>
 </html>
