--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Native Browser Dialog Example</title>
+    <title>Native Browser Dialogs Example</title>
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
             //the event occurred
@@ -21,7 +21,10 @@
             }
 
             function confirmFunction() {
-                window.confirm("TEST?");
+                let confirmBool = window.confirm("TEST?");
+                if(confirmBool){
+
+                }
             }
 
             function promptFunction() {
@@ -30,21 +33,29 @@
 
             function saferPromptFunction() {
 
-
             }
         })
 
     </script>
+    <script type="module">
+        import {customdialog} from './customdialog.js';
+
+        customdialog();
+    </script>
 </head>
 <body>
-    <section id="button-box">
-        <button id="alert-button">Alert</button>
-        <button id="confirm-button">Confirm</button>
-        <button id="prompt-button">Prompt</button>
-        <button id="safer-prompt-button">Safer Prompt</button>
-    </section>
-    <section id="main-display">
+    <main>
+        <h1> Native Dialogs</h1>
+        <section id="button-box">
+            <button id="alert-button">Alert</button>
+            <button id="confirm-button">Confirm</button>
+            <button id="prompt-button">Prompt</button>
+            <button id="safer-prompt-button">Safer Prompt</button>
+        </section>
+        <section id="main-display">
+            <output></output>
+        </section>
+    </main>
 
-    </section>
 </body>
 </html>
