creating all new files for hw4, and nativedialogs.html buttons/html

--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -37,12 +37,12 @@
         })
 
     </script>
+    <!--Custom Dialog Module -->
     <script type="module">
         import {customdialog} from './customdialog.js';
         document.addEventListener('DOMContentLoaded', (event) => {
             customdialog();
         });
-
     </script>
 </head>
 <body>
