creating all new files for hw4, and nativedialogs.html buttons/html

--- a/customdialog.html
+++ b/customdialog.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Custom Dialog Example</title>
     <!--Custom Dialog Module -->
-    <script type="module">
-        import * as customDialog from './customdialog.js';
+    <script type="module" src="customdialog.js">
+        //import * as CustomDialog from './customdialog.js';
         document.addEventListener('DOMContentLoaded', (event) => {
-            customdialog.();
+            customdialogMain();
+
         });
     </script>
 </head>
