creating all new files for hw4, and nativedialogs.html buttons/html

--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -37,7 +37,13 @@
         })
 
     </script>
+    <script type="module" src="customdialog.js">
+        //import * as CustomDialog from './customdialog.js';
+        document.addEventListener('DOMContentLoaded', (event) => {
+            customdialogMain();
 
+        });
+    </script>
 </head>
 <body>
     <main>
