creating all new files for hw4, and nativedialogs.html buttons/html

--- a/crud.html
+++ b/crud.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>CRUD Blog Example</title>
+    <script type="module">
+        import {test} from './blog.js';
+        test.test;
+    </script>
 </head>
 <body>
     <header></header>
