--- a/crud.html
+++ b/crud.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>CRUD Blog Example</title>
     <script type="module">
-        import {test} from './blog.js';
-        test.test;
+        import * as blogPost from './blog.js';
+        blogPost.blogMain();
     </script>
 </head>
 <body>
