creating all new files for hw4, and nativedialogs.html buttons/html

--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -40,6 +40,11 @@
             function saferPromptFunction() {
 
             }
+
+            function myTag(strings, msg){
+                strings[0] = `The user`;
+                strings[0] = msg;
+            }
         })
 
     </script>
