--- a/crud.html
+++ b/crud.html
@@ -12,7 +12,31 @@
     <header></header>
     <h1>CRUD Blog</h1>
     <main>
-
+        <section id="posts-section">
+            <button id="add-post" onclick="">Add New Post</button>
+            <dialog id="favDialog">
+                <form method="dialog">
+                    <p>
+                        <label>Favorite animal:
+                            <select>
+                                <option value="default">Choose…</option>
+                                <option>Brine shrimp</option>
+                                <option>Red panda</option>
+                                <option>Spider monkey</option>
+                            </select>
+                        </label>
+                    </p>
+                    <div>
+                        <button value="cancel">Cancel</button>
+                        <button id="confirmBtn" value="default">Confirm</button>
+                    </div>
+                </form>
+            </dialog>
+            <p>
+                <button id="showDialog">Show the dialog</button>
+            </p>
+            <output></output>
+        </section>
     </main>
     <footer></footer>
 </body>
