creating all new files for hw4, and nativedialogs.html buttons/html

--- a/crud.html
+++ b/crud.html
@@ -13,7 +13,7 @@
     <h1>CRUD Blog</h1>
     <main>
         <section id="posts-section">
-            <button id="add-post" onclick="">Add New Post</button>
+            <button id="add-post" onclick="document.getElementById('favDialog').showModal()">Add New Post</button>
             <dialog id="favDialog">
                 <form method="dialog">
                     <p>
