--- a/crud.html
+++ b/crud.html
@@ -17,7 +17,7 @@
     <h1>CRUD Blog</h1>
     <main>
         <section id="posts-section">
-            <button id="add-post" onclick="blogPost.createBlogPost()">Add New Post</button>
+            <button id="add-post">Add New Post</button>
             <dialog id="new-post-dialog">
                 <form method="dialog">
                     <p>
