creating all new files for hw4, and nativedialogs.html buttons/html

--- a/crud.html
+++ b/crud.html
@@ -21,17 +21,18 @@
             <dialog id="new-post-dialog">
                 <form method="dialog">
                     <p>
-                        <label>Title:</label>
-                        <input type="text" name="post-title" id="title-input">
+                        <label for="title-input">Title:</label>
+                        <input type="text" name="title-input" id="title-input">
                     </p>
                     <p>
-                        <label>Date:</label>
+                        <label for="date-input">Date:</label>
+                        <input type="date" name="date-input" id="date-input">
                     </p>
                     <p>
                         <label>Summary:
 
                         </label>
-                        <textarea>
+                        <textarea id="summary-text" name="summary-text">
 
                         </textarea>
                     </p>
