--- a/crud.html
+++ b/crud.html
@@ -22,17 +22,17 @@
                 <form method="dialog">
                     <p>
                         <label for="title-input">Title:</label>
-                        <input type="text" name="title-input" id="title-input">
+                        <input type="text" name="title-input" id="title-input" required>
                     </p>
                     <p>
                         <label for="date-input">Date:</label>
-                        <input type="date" name="date-input" id="date-input">
+                        <input type="date" name="date-input" id="date-input" required>
                     </p>
                     <p>
                         <label>Summary:
 
                         </label>
-                        <textarea id="summary-text" name="summary-text">
+                        <textarea id="summary-text" name="summary-text" required>
 
                         </textarea>
                     </p>
