creating all new files for hw4, and nativedialogs.html buttons/html

--- a/crud.html
+++ b/crud.html
@@ -36,6 +36,7 @@
 
                         </textarea>
                     </p>
+                    <input id="post-number" value="0" hidden>
                     <div>
                         <button id="cancel-button" value="cancel">Cancel</button>
                         <button id="confirmBtn" value="default">Confirm</button>
