--- a/hw4/nativedialogs.html
+++ b/hw4/nativedialogs.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Native Browser Dialogs Example</title>
+    <script type="text/javascript" src="./purify.min.js"></script>
     <script type="module">
         import * as cd from './customdialog.js';
         document.addEventListener('DOMContentLoaded', (event) => {
@@ -22,6 +23,7 @@
             promptButton.addEventListener("click", promptFunction);
             saferPromptButton.addEventListener("click", saferPromptFunction);
 
+            const output = myTag`That ${person} is a ${age}.`;
             function alertFunction() {
                 window.alert("TEST");
             }
@@ -40,6 +42,19 @@
             function saferPromptFunction() {
 
             }
+
+            function myTag(strings, personExp, ageExp) {
+                const str0 = strings[0]; // "That "
+                const str1 = strings[1]; // " is a "
+                const str2 = strings[2]; // "."
+
+                const ageStr = ageExp > 99 ? "centenarian" : "youngster";
+
+                // We can even return a string built using a template literal
+                return `${str0}${personExp}${str1}${ageStr}${str2}`;
+            }
+
+
 
             function myTag(strings, msg){
                 strings[0] = `The user`;
