--- a/hw4/nativedialogs.html
+++ b/hw4/nativedialogs.html
@@ -12,8 +12,8 @@
     </script>
     <script>
         //let clean = DOMPurify.sanitize(`<p>HELLLLLLO</p>`);
-        document.getElementsByTagName("output")[0].innerHTML = clean;
-        document.getElementById('output-box').innerHTML = clean;
+        //document.getElementsByTagName("output")[0].innerHTML = clean;
+        //document.getElementById('output-box').innerHTML = clean;
 
 
         //const output = myTag`That ${person} is a ${age}.`;
@@ -36,25 +36,6 @@
 
         }
 
-        function myTag(strings, personExp, ageExp) {
-            const str0 = strings[0]; // "That "
-            const str1 = strings[1]; // " is a "
-            const str2 = strings[2]; // "."
-
-            const ageStr = ageExp > 99 ? "centenarian" : "youngster";
-
-            // We can even return a string built using a template literal
-            return `${str0}${personExp}${str1}${ageStr}${str2}`;
-        }
-
-
-
-        function myTag(strings, msg){
-            strings[0] = `The user`;
-            strings[0] = msg;
-        }
-
-
         document.addEventListener('DOMContentLoaded', () => {
             //the event occurred
             let alertButton = document.getElementById('alert-button');
@@ -65,7 +46,15 @@
             alertButton.addEventListener('click', () => {
                 alertFunction();
             });
-
+            alertButton.addEventListener('click', () => {
+                alertFunction();
+            });
+            alertButton.addEventListener('click', () => {
+                alertFunction();
+            });
+            alertButton.addEventListener('click', () => {
+                alertFunction();
+            });
             alertButton.addEventListener("onclick", alertFunction);
             confirmButton.addEventListener("click", confirmFunction);
             promptButton.addEventListener("click", promptFunction);
