--- a/hw4/customdialog.html
+++ b/hw4/customdialog.html
@@ -20,8 +20,9 @@
             <button id="custom-confirm-button">Confirm</button>
             <button id="custom-prompt-button">Prompt</button>
         </section>
+        <dialog id="cs-dialog"></dialog>
         <section id="custom-main-display">
-            <output></output>
+            <output id="cs-output"></output>
         </section>
     </main>
 </body>
