--- a/hw4/nativedialogs.html
+++ b/hw4/nativedialogs.html
@@ -14,6 +14,7 @@
         import * as cd from './customdialog.js';
         document.addEventListener('DOMContentLoaded', () => {
             cd.customdialogMain();
+            console.log("DOM LOADED");
         });
     </script>
     <script>
