--- a/hw4/crud.html
+++ b/hw4/crud.html
@@ -43,7 +43,11 @@
                     </div>
                 </form>
             </dialog>
-            <output id="output-box"></output>
+            <output id="output-box">
+                <ul id="post-list">
+
+                </ul>
+            </output>
             <button id="add-post">Add New Post</button>
         </section>
     </main>
