--- a/hw4/nativedialogs.html
+++ b/hw4/nativedialogs.html
@@ -11,7 +11,7 @@
     </style>
     <script type="text/javascript" src="dist/purify.min.js"></script>
     <script type="module">
-        import * as cd from './customdialog.js';
+        //import * as cd from './customdialog.js';
         document.addEventListener('DOMContentLoaded', () => {
             cd.customdialogMain();
             console.log("DOM LOADED");
