--- a/hw4/styledcrud.html
+++ b/hw4/styledcrud.html
@@ -2,9 +2,80 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>CRUD Blog Example</title>
+    <script type="module">
+        import * as blogPost from './blog.js';
+
+        document.addEventListener('DOMContentLoaded', (event) => {
+            blogPost.blogMain();
+        });
+
+    </script>
 </head>
 <body>
+<header></header>
+<h1>CRUD Blog</h1>
+<main>
+    <section id="posts-section">
 
+        <dialog id="new-post-dialog">
+            <form method="dialog">
+                <p>
+                    <label for="title-input">Title:</label>
+                    <input type="text" name="title-input" id="title-input" required>
+                </p>
+                <p>
+                    <label for="date-input">Date:</label>
+                    <input type="date" name="date-input" id="date-input" required>
+                </p>
+                <p>
+                    <label>Summary:
+
+                    </label>
+                    <textarea id="summary-text" name="summary-text">
+
+                        </textarea>
+                </p>
+                <input id="post-number" value="0" hidden>
+                <div>
+                    <button id="cancel-button" value="cancel">Cancel</button>
+                    <button id="confirmBtn" value="default">Confirm</button>
+                </div>
+            </form>
+        </dialog>
+        <dialog id="update-post-dialog">
+            <form method="dialog">
+                <p>
+                    <label for="update-title-input">Title:</label>
+                    <input type="text" name="update-title-input" id="update-title-input" required>
+                </p>
+                <p>
+                    <label for="update-date-input">Date:</label>
+                    <input type="date" name="update-date-input" id="update-date-input" required>
+                </p>
+                <p>
+                    <label>Summary:
+
+                    </label>
+                    <textarea id="update-summary-text" name="update-summary-text">
+
+                        </textarea>
+                </p>
+                <input id="update-post-number" value="0" hidden>
+                <div>
+                    <button id="update-cancel-button" value="cancel">Cancel</button>
+                    <button id="update-confirmBtn" value="default">Confirm</button>
+                </div>
+            </form>
+        </dialog>
+        <output id="output-box">
+            <ul id="post-list">
+
+            </ul>
+        </output>
+        <button id="add-post">Add New Post</button>
+    </section>
+</main>
+<footer></footer>
 </body>
 </html>
