--- a/hw4/customdialog.html
+++ b/hw4/customdialog.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KSK32BCTRW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-KSK32BCTRW');
+    </script>
     <meta charset="UTF-8">
     <title>Custom Dialog Example</title>
     <script type="text/javascript" src="dist/purify.min.js"></script>
