--- a/hw4/crud.html
+++ b/hw4/crud.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <title>CRUD Blog Example</title>
+    <script type="text/javascript" src="dist/purify.min.js"></script>
+    <script type="module">
+        import {blogMain} from './blog.js';
+
+        document.addEventListener('DOMContentLoaded', (event) => {
+            blogMain();
+        });
+
+    </script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KSK32BCTRW"></script>
     <script>
@@ -10,16 +21,6 @@
 
         gtag('config', 'G-KSK32BCTRW');
     </script>
-    <meta charset="UTF-8">
-    <title>CRUD Blog Example</title>
-    <script type="module">
-        import {blogMain} from './blog.js';
-
-        document.addEventListener('DOMContentLoaded', (event) => {
-            blogMain();
-        });
-
-    </script>
 </head>
 <body>
     <header></header>
@@ -28,6 +29,7 @@
         <section id="posts-section">
 
             <dialog id="new-post-dialog">
+                <h2 style="text-align: center">Add a New Post</h2>
                 <form method="dialog">
                     <p>
                         <label for="title-input">Title:</label>
@@ -48,11 +50,12 @@
                     <input id="post-number" value="0" hidden>
                     <div>
                         <button id="cancel-button" value="cancel">Cancel</button>
-                        <button id="confirmBtn" value="default">Confirm</button>
+                        <button id="confirmBtn" value="default">Save</button>
                     </div>
                 </form>
             </dialog>
             <dialog id="update-post-dialog">
+                <h2 style="text-align: center">Update a Post</h2>
                 <form method="dialog">
                     <p>
                         <label for="update-title-input">Title:</label>
@@ -73,8 +76,17 @@
                     <input id="update-post-number" value="0" hidden>
                     <div>
                         <button id="update-cancel-button" value="cancel">Cancel</button>
-                        <button id="update-confirmBtn" value="default">Confirm</button>
+                        <button id="update-confirmBtn" value="default">Save</button>
                     </div>
+                </form>
+            </dialog>
+            <dialog id="delete-post-dialog">
+                <h2 style="text-align: center">Delete post?</h2>
+                <form method="dialog">
+                    <p>Are you sure you want to delete this post?</p>
+                    <input id="delete-post-number" value="0" hidden>
+                    <button id="delete-cancel-button">Cancel</button>
+                    <button id="delete-confirmBtn">Yes</button>
                 </form>
             </dialog>
             <output id="output-box">
