libraries and styledcrud

--- a/hw4/customdialog.html
+++ b/hw4/customdialog.html
@@ -36,7 +36,7 @@
         </dialog>
 
         <section id="custom-main-display">
-            <output id="cs-output"></output>
+            <output id="cs-output" style="margin: 1rem; padding:1rem;"></output>
         </section>
     </main>
 </body>
