libraries and styledcrud

--- a/hw4/customdialog.html
+++ b/hw4/customdialog.html
@@ -26,7 +26,7 @@
 <body>
     <main>
         <h1> Custom Dialogs</h1>
-        <section id="button-box">
+        <section id="button-box" style="padding:1rem;">
             <button id="custom-alert-button">Alert</button>
             <button id="custom-confirm-button">Confirm</button>
             <button id="custom-prompt-button">Prompt</button>
