--- a/hw4/nativedialogs.html
+++ b/hw4/nativedialogs.html
@@ -3,12 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Native Browser Dialogs Example</title>
-    <style>
-        #output-box{
-            border: solid black 2px;
-            border-radius: 1rem;
-        }
-    </style>
     <script type="text/javascript" src="dist/purify.min.js"></script>
     <script type="module">
         //import * as cd from './customdialog.js';
@@ -18,11 +12,7 @@
         });
     </script>
     <script>
-        let clean = DOMPurify.sanitize(`<img src=x onerror=alert(1)>`, { USE_PROFILES: { html: true } });
-        console.log(clean);
-        //document.getElementsByTagName("output")[0].innerHTML = clean;
-
-
+        const outputBox = document.getElementById('output-box');
         function cleanUp(strings, name) {
             const str0 = strings[0];
             const str1 = strings[1];
@@ -32,58 +22,108 @@
 
             return cleanUserInput;
         }
+
+        function cleanUpConfirm(strings, result) {
+            const str0 = strings[0];
+            const str1 = strings[1];
+
+            let cleanUserInput = DOMPurify.sanitize(`${str0}${result}${str1}`, { USE_PROFILES: { html: true } });
+
+            return cleanUserInput;
+        }
         function alertFunction() {
             window.alert("You are being alerted with an URGENT MESSAGE!");
         }
 
         function confirmFunction() {
+
+            //outputBox.style.display = "inline-block";
+            const outputBox = document.getElementById('output-box');
             let confirmBool = window.confirm("Do you Confirm?");
-            document.getElementById("output-box").border = "double black 2px";
+
+            outputBox.style.display ="inline-block";
+            outputBox.innerHTML = cleanUpConfirm`<div style="border: solid black 4px;
+                                        border-style:double;padding:1rem;"><p>Confirm Result: ${confirmBool} </p></div>`;
+            /**
+            //evaluate response
             if(confirmBool){
-                document.getElementById("output-box").innerHTML = `<p>User Confirmed YES </p>`;
+                outputBox.style.display = "inline-block";
+                outputBox.innerHTML = `<div style="border: black 4px;
+                                        border-style:double;padding:1rem;"><p>User Confirmed YES </p></div>`;
+
             }else{
-                document.getElementById("output-box").innerHTML = `<p>User Did Not Confirm, User selected CANCEL </p>`;
-            }
+
+                outputBox.getElementById("output-box").innerHTML = `<div style="border: solid black 4px;
+                                        border-style:double;padding:1rem;"><p>User Did Not Confirm, User selected CANCEL </p></div>`;
+                outputBox.style.display = "inline-block";
+            }*/
         }
 
         function promptFunction() {
+            const outputBox = document.getElementById('output-box');
             let personName = window.prompt("What is your name?");
+
+            //evaluate response
             if(!personName.trim() == ""){
-                document.getElementById("output-box").innerHTML = `<p>Welcome ${personName}!</p>
-                                                                   <p>This website aims to provide cool features for users like you, ${personName}</p>`;
+                outputBox.style.display = "inline-block";
+                outputBox.innerHTML = `<div style="border:black 4px; border-style:double;
+                                                                    padding:1rem;"><p>Welcome ${personName}!</p>
+                                                                   <p>This website aims to provide cool features for users like you, ${personName}</p></div>`;
+
             }else{
-                document.getElementById("output-box").innerHTML = `<p>User Confirmed NO </p>`;
+                outputBox.innerHTML = `<div style="border: solid black 4px; border-style:double;padding:1rem;"><p>User did not enter anything </p></div>`;
+                outputBox.style.display = "inline-block";
             }
         }
 
         function saferPromptFunction() {
-            let personName = window.prompt("HELLO WORLD");
+            const outputBox = document.getElementById('output-box');
+            let personName = window.prompt("What is your name?");
+
+            //evaluate response
             if(!personName.trim() == ""){
-                document.getElementById("output-box").innerHTML = cleanUp`<p>Welcome ${personName}!</p>
-                                                                   <p>This website aims to provide cool features for users like you, ${personName}</p>`;
+                outputBox.innerHTML = cleanUp`<div style="border: solid black 4px; border-style:double;padding:1rem;"><p>Welcome ${personName}!</p>
+                                                                   <p>This website aims to provide cool features for users like you, ${personName}</p></div>`;
+                outputBox.style.display = "inline-block";
+            }else{
+                outputBox.innerHTML = `<div style="border: solid black 4px; border-style:double;padding:1rem;"><p>User did not enter anything </p></div>`;
+                outputBox.style.display = "inline-block";
             }
         }
 
         document.addEventListener('DOMContentLoaded', () => {
-            let display = document.getElementById('main-display');
-            display.innerHTML += clean;
+
             //the event occurred
             let alertButton = document.getElementById('alert-button');
             let confirmButton = document.getElementById('confirm-button');
             let promptButton = document.getElementById('prompt-button');
             let saferPromptButton = document.getElementById('safer-prompt-button');
+            const outputBox = document.getElementById('output-box');
 
+            /**button event listeners, bind click events to respective functions*/
             alertButton.addEventListener('click', () => {
-                alertFunction();
+                outputBox.style.display = "none";
+                setTimeout(function() {
+                    alertFunction();
+                },10)
             });
             confirmButton.addEventListener('click', () => {
-                confirmFunction();
+                outputBox.style.display = "none";
+                setTimeout(function() {
+                    confirmFunction();
+                },10)
             });
             promptButton.addEventListener('click', () => {
-                promptFunction();
+                outputBox.style.display = "none";
+                setTimeout(function() {
+                    promptFunction();
+                },10)
             });
             saferPromptButton.addEventListener('click', () => {
-                saferPromptFunction();
+                outputBox.style.display = "none";
+                setTimeout(function() {
+                    saferPromptFunction();
+                },10)
             });
         })
 
